--- a/TangentConstruction/TangentConstruction New Site/TangentHome.html
+++ b/TangentConstruction/TangentConstruction New Site/TangentHome.html
@@ -2,11 +2,11 @@
 
 
 <html>
-<div class="pageContent">
+<div class="pageContent container">
   <header>
     <title> Tangent Construction Services </title>
-    <link href="restaurantStyle.css" rel="stylesheet" type "text/css" />
-    <link href="css/bootstrap.css" rel="stylesheet" />
+    <link href="/../css/TangentStyle.css" rel="stylesheet" type "text/css" />
+    <link href="/../css/bootstrap.css" rel="stylesheet" />
 
     <!--  These two are for using tabs for navigation.  The first one enables it, second speeds it up? -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -15,16 +15,69 @@
     <h1>
       Tangent Construction Services - Home
     </h1>
-    <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
+    <div id="nav" class="col-lg-12 center-block" style="text-align:center; align-content: center;">
+      <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
+      <!-- spacing -->
+      <div class="col-sm-1"> </div>
+
+      <div class="col-sm-2">
+        <a href=""> first Link </a>
+      </div>
+      <div class="col-sm-2">
+        <a href=""> Second Link </a>
+      </div>
+      <div class="col-sm-2">
+        <a href=""> Third Link </a>
+      </div>
+      <div class="col-sm-2">
+        <a href=""> Fourth Link </a>
+      </div>
+      <div class="col-sm-2">
+        <a href=""> Fifth Link </a>
+      </div>
+      <div class="col-sm-1"> </div>
+    </div>
+
+    <hr />
+    <hr />
+    <hr />
   </header>
 
   <body>
 
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="..." alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="..." alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="..." alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <!-- wrong -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </div>
