updated ui, view, page headers
background change, spacing, hr's for dividers.  used section headers fore ach page to breakdown what we talk about.

--- a/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
+++ b/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
@@ -39,12 +39,35 @@
       <div class="col-sm-1"> </div>
     </div>
 
-    <hr />
-
   </header>
 
   <body>
+    <!-- Spacing  -->
+    <br> <br> <br> <br>
+    <hr>
+    <h1 style="text-align: center"> A Tangent worthy job of replacing chinese drywall... </h1>
+    <hr>
 
+    <div id="removal">
+      <h4> We handle the removal of bad drywall.. </h4>
+      <p>
+      </p>
+    </div>
+
+    <div id="cleaning">
+      <h4> We handle the cleaning (HEPA clean).. </h4>
+      <p>
+      </p>
+    </div>
+
+    <div id="replacement">
+      <h4> We handle the drywall replacement.. </h4>
+      <h5> Hang </h5>
+      <h5> finish </h5>
+      <h5> texture </h5>
+      <p>
+      </p>
+    </div>
 
 
 
