--- a/TangentConstruction/TangentConstruction New Site/ContactUs.html
+++ b/TangentConstruction/TangentConstruction New Site/ContactUs.html
@@ -39,12 +39,22 @@
       <div class="col-sm-1"> </div>
     </div>
 
-    <hr />
-
   </header>
 
   <body>
+    <br> <br> <br> <br>
+    <hr>
 
+    <h1> Want to contact Tangent Construction for potential work? </h1>
+    <p> Try one of these <br> <br>
+      Phone: <br>
+      (813) 628-4411 <br> <br>
+
+      email: <br> <br>
+      Location: <br>
+      4514 Oak Fair Boulevard, Suite 150<br>
+      Tampa, Florida 33610<br> <br>
+    </p>
 
 
 
