--- a/TangentConstruction/TangentConstruction New Site/NewConstruction.html
+++ b/TangentConstruction/TangentConstruction New Site/NewConstruction.html
@@ -39,12 +39,32 @@
       <div class="col-sm-1"> </div>
     </div>
 
-    <hr />
-
   </header>
 
   <body>
+    <!-- Spacing  -->
+    <br> <br> <br> <br>
+    <hr>
+    <h1 style="text-align: center"> A Tangent worthy job for new construction... </h1>
+    <hr>
 
+    <div id="stucco">
+      <h4> We handle stucco.. </h4>
+      <p>
+      </p>
+    </div>
+
+    <div id="foam">
+      <h4> We handle architectural foam.. </h4>
+      <p>
+      </p>
+    </div>
+
+    <div id="stone">
+      <h4> We handle architectural stone.. </h4>
+      <p>
+      </p>
+    </div>
 
 
 
