--- a/TangentConstruction/TangentConstruction New Site/TangentHome.html
+++ b/TangentConstruction/TangentConstruction New Site/TangentHome.html
@@ -39,15 +39,29 @@
       <div class="col-sm-1"> </div>
     </div>
 
-    <hr />
-    <hr />
-    <hr />
   </header>
 
   <body>
-    <br />
-    <br />
+    <!-- Spacing  -->
+    <br> <br> <br> <br>
+    <hr>
 
+    <p> Welcome to Tangent Construction Services <br>
+      We are a family owned construction company that focuses on Stucco Remediation, New Construction, and Chinese Drywall.
+      We have been in buisness for more than a decade.
+
+
+      Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+      topsail wench hearties lugsail bilge rat.
+
+      Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain Shot gaff Spanish Main spanker holystone
+      rutters black jack keelhaul spike Jack Ketch.
+
+      Heave down tender starboard tack lass splice the main brace port driver hogshead clap of thunder. Jack Ketch tackle swing the lead yo-ho-ho salmagundi grog blossom galleon league mutiny sutler. Pillage splice the main brace reef marooned fire
+      ship belay parley mizzenmast fire in the hole deadlights.
+    </p>
+    <br>
+    <br>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="text-align:center; align-content: center;">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
