--- a/TangentConstruction/TangentConstruction New Site/TangentHome.html
+++ b/TangentConstruction/TangentConstruction New Site/TangentHome.html
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <h1>
-      Tangent Construction Services - Home
+      <!-- old header -->
     </h1>
     <div id="nav" class="col-lg-12 center-block" style="text-align:center; align-content: center;">
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
@@ -46,7 +46,8 @@
     <br> <br> <br> <br>
     <hr>
 
-    <p> Welcome to Tangent Construction Services <br>
+    <h5 style="text-align: center"> Welcome to Tangent Construction Services </h5> <br>
+    <p>
       We are a family owned construction company that focuses on Stucco Remediation, New Construction, and Chinese Drywall.
       We have been in buisness for more than a decade.
 
