--- a/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
+++ b/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
@@ -19,6 +19,7 @@
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
       <!-- spacing -->
+      <hr>
       <div class="col-sm-1"> </div>
 
       <div class="col-sm-2">
@@ -43,9 +44,9 @@
 
   <body>
     <!-- Spacing  -->
-    <br> <br> <br> <br>
+    <br> <br> <br> <br> <br> <br>
     <hr>
-    <h1 style="text-align: center"> A Tangent worthy job of replacing chinese drywall... </h1>
+    <h1 style="text-align: center"> When Tangent replaces your Chinese Drywall... </h1>
     <hr>
 
     <div id="removal">
