--- a/TangentConstruction/TangentConstruction New Site/NewConstruction.html
+++ b/TangentConstruction/TangentConstruction New Site/NewConstruction.html
@@ -19,6 +19,7 @@
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
       <!-- spacing -->
+      <hr>
       <div class="col-sm-1"> </div>
 
       <div class="col-sm-2">
@@ -39,31 +40,59 @@
       <div class="col-sm-1"> </div>
     </div>
 
+
   </header>
 
   <body>
     <!-- Spacing  -->
-    <br> <br> <br> <br>
+    <br> <br> <br> <br> <br> <br>
     <hr>
     <h1 style="text-align: center"> A Tangent worthy job for new construction... </h1>
     <hr>
 
-    <div id="stucco">
+    <div id="stucco" class='col-lg-12'>
       <h4> We handle stucco.. </h4>
-      <p>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
+      <div class="image col-md-4"> <img src="images/ApronPainting.jpg" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
     </div>
 
-    <div id="foam">
+    <br>
+    <hr> <br>
+    <br>
+    <hr> <br>
+    <br>
+    <hr> <br>
+
+
+    <div id="foam" class=col-lg-12>
       <h4> We handle architectural foam.. </h4>
-      <p>
+      <div class="image col-md-4"> <img src="images/ApronPainting.jpg" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
     </div>
 
-    <div id="stone">
+    <br>
+    <hr> <br>
+    <br>
+    <hr> <br>
+    <br>
+    <hr> <br>
+
+    <div id="stone" class='col-lg-12'>
       <h4> We handle architectural stone.. </h4>
-      <p>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
+      <div class="image col-md-4"> <img src="images/ApronPainting.jpg" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
     </div>
 
 
