--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
@@ -19,8 +19,8 @@
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
       <!-- spacing -->
+      <hr>
       <div class="col-sm-1"> </div>
-
       <div class="col-sm-2">
         <a href="TangentHome.html" target="_self"> Tangent Home </a>
       </div>
@@ -44,34 +44,85 @@
   <body>
     <br> <br> <br> <br>
     <hr>
+    <hr>
+    <hr>
     <h1 style="text-align: center"> A Tangent worthy job... </h1>
     <hr>
 
-    <div id="stucco">
-      <h4> We handle stucco.. </h4>
-      <p>
+    <div id="stucco" class='col-lg-12'>
+      <h4 style="text-align: center"> We handle stucco.. </h4>
+      <div class="image col-md-4"> <img src="../EmailedPictures/MultiFamilyHouse1.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
     </div>
 
-    <div id="painting">
-      <h4> We handle painting.. </h4>
-      <p>
+    <br>
+    <hr> <br>
+    <br>
+    <hr> <br>
+    <br>
+    <hr> <br>
+
+    <div id="painting" class='col-lg-12'>
+      <h4 style="text-align: center"> We handle painting.. </h4>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      </p>
+      <div class="image col-md-4"> <img src="../EmailedPictures/MultiFamilyHouse1.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+    </div>
+
+    <br>
+    <hr> <br>
+    <br>
+    <hr> <br>
+    <br>
+    <hr> <br>
+
+    <div id="soffit" class='col-lg-12'>
+      <h4 style="text-align: center"> We handle aluminum soffit.. </h4>
+      <div class="image col-md-4"> <img src="../EmailedPictures/MultiFamilyHouse1.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
     </div>
 
-    <div id="soffit">
-      <h4> We handle aluminum soffit.. </h4>
-      <p>
+    <br>
+    <hr> <br>
+    <br>
+    <hr> <br>
+    <br>
+    <hr> <br>
+
+    <div id="screen enclosure" class='col-lg-12'>
+      <h4 style="text-align: center"> We handle screen enclosures.. </h4>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
+      <div class="image col-md-4"> <img src="../EmailedPictures/MultiFamilyHouse1.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
     </div>
 
-    <div id="screen enclosure">
-      <h4> We handle screen enclosures.. </h4>
-      <p>
-      </p>
-    </div>
+    <br>
+    <hr> <br>
+    <br>
+    <hr> <br>
+    <br>
+    <hr> <br>
     <!-- This is for  commercial -->
-    <br> <br> <br> <br> <br>
+    <br> <br> <br>
+    <h2 style="text-align: center">
+      This is how a Tangent job looks.
+    </h2>
+    <br>
+
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="text-align:center; align-content: center;">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -80,13 +131,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="../EmailedPictures/MultiFamilyHouse1.jpg" alt="First slide">
+          <img class="d-block w-100" src="../EmailedPictures/MultiFamilyHouse1.jpg" width="450" height="550" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="../EmailedPictures/MultiFamilyHouse2.png" alt="Second slide">
+          <img class="d-block w-100" src="../EmailedPictures/MultiFamilyHouse4.jpg" width="450" height="550" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="../EmailedPictures/MultiFamilyHouse3.jpg" alt="Third slide">
+          <img class="d-block w-100" src="../EmailedPictures/MultiFamilyHouse3.jpg" width="150" height="550" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
