updated carousel, added new pictures.
added new pictures to repo, expanded carousel.  Increased size to seven pictures,  and added descriptive captions to each one explainingthe process.

--- a/TangentConstruction/TangentConstruction New Site/NewConstruction.html
+++ b/TangentConstruction/TangentConstruction New Site/NewConstruction.html
@@ -57,20 +57,14 @@
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
-      <div class="image col-md-4"> <img src="images/ApronPainting.jpg" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
     </div>
-
-    <br>
-    <hr> <br>
-    <br>
-    <hr> <br>
-    <br>
-    <hr> <br>
 
 
     <div id="foam" class=col-lg-12>
+      <hr>
       <h4> We handle architectural foam.. </h4>
-      <div class="image col-md-4"> <img src="images/ApronPainting.jpg" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/Architectual stuff/ArcheFoam.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
@@ -78,21 +72,16 @@
       </p>
     </div>
 
-    <br>
-    <hr> <br>
-    <br>
-    <hr> <br>
-    <br>
-    <hr> <br>
 
     <div id="stone" class='col-lg-12'>
+      <hr>
       <h4> We handle architectural stone.. </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
-      <div class="image col-md-4"> <img src="images/ApronPainting.jpg" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/Architectual stuff/ArcheStone.jpg"" width=" 250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
     </div>
 
 
