--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
@@ -42,16 +42,14 @@
   </header>
 
   <body>
-    <br> <br> <br> <br>
-    <hr>
-    <hr>
+    <br> <br> <br> <br> <br> <br> <br>
     <hr>
     <h1 style="text-align: center"> A Tangent worthy job... </h1>
     <hr>
 
     <div id="stucco" class='col-lg-12'>
       <h4 style="text-align: center"> We handle stucco.. </h4>
-      <div class="image col-md-4"> <img src="../EmailedPictures/MultiFamilyHouse1.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
@@ -59,33 +57,23 @@
       </p>
     </div>
 
-    <br>
-    <hr> <br>
-    <br>
-    <hr> <br>
-    <br>
-    <hr> <br>
 
     <div id="painting" class='col-lg-12'>
+      <hr>
       <h4 style="text-align: center"> We handle painting.. </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
-      <div class="image col-md-4"> <img src="../EmailedPictures/MultiFamilyHouse1.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/StuccoRemediation/Painting.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
     </div>
 
-    <br>
-    <hr> <br>
-    <br>
-    <hr> <br>
-    <br>
-    <hr> <br>
 
     <div id="soffit" class='col-lg-12'>
+      <hr>
       <h4 style="text-align: center"> We handle aluminum soffit.. </h4>
-      <div class="image col-md-4"> <img src="../EmailedPictures/MultiFamilyHouse1.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/StuccoRemediation/Soffit.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
@@ -93,51 +81,83 @@
       </p>
     </div>
 
-    <br>
-    <hr> <br>
-    <br>
-    <hr> <br>
-    <br>
-    <hr> <br>
 
     <div id="screen enclosure" class='col-lg-12'>
+      <hr>
       <h4 style="text-align: center"> We handle screen enclosures.. </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
-      <div class="image col-md-4"> <img src="../EmailedPictures/MultiFamilyHouse1.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/Pool Covering/ScreenEnclosureProtected.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
     </div>
 
-    <br>
-    <hr> <br>
-    <br>
-    <hr> <br>
-    <br>
-    <hr> <br>
+    <!-- spacer -->
+    <div class="col-lg-12">
+      <hr>
+    </div>
+
     <!-- This is for  commercial -->
-    <br> <br> <br>
-    <h2 style="text-align: center">
-      This is how a Tangent job looks.
-    </h2>
+    <div>
+      <h2 style="text-align: center;  text-align:center">
+        This is how a Tangent job looks.
+      </h2>
+    </div>
     <br>
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="text-align:center; align-content: center;">
+    <div id="carouselExampleIndicators" class="carousel slide offset-md-2" data-ride="carousel" style="width: 800px; text-align:center; align-content: center;">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="../EmailedPictures/MultiFamilyHouse1.jpg" width="450" height="550" alt="First slide">
+          <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/Demo.jpg" width="450" height="550" alt="First slide">
+          <div class="carousel-caption">
+            <h3>First, we tear down the old stucco to assess the damage to framing.</h3>
+          </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="../EmailedPictures/MultiFamilyHouse4.jpg" width="450" height="550" alt="Second slide">
+          <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/Visqueen.jpg" width="450" height="550" alt="Second slide">
+          <div class="carousel-caption">
+            <h3>Visqueen is used intermittently to protect the framing while work is being done.</h3>
+          </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="../EmailedPictures/MultiFamilyHouse3.jpg" width="150" height="550" alt="Third slide">
+          <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/FrameRepairs.jpg" width="150" height="550" alt="Third slide">
+          <div class="carousel-caption">
+            <h3>Framing damage is repaired.</h3>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/Tyvek.jpg" width="150" height="550" alt="Fourth slide">
+          <div class="carousel-caption">
+            <h3>Tyvek is added as a water barrier for the framing.</h3>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/WireLathe.jpg" width="150" height="550" alt="Fifth slide">
+          <div class="carousel-caption">
+            <h3>Wire lathe is added so that the stucco has something to bond to.</h3>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="150" height="550" alt="Sixth slide">
+          <div class="carousel-caption">
+            <h3>The stucco layer is added finally, as well as texture.</h3>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/FinishedHouse.jpg" width="150" height="550" alt="Seventh slide">
+          <div class="carousel-caption">
+            <h3>Last, the house is caulked and painted.</h3>
+          </div>
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
