added background and underlines
background is now colored, and current links are underlined (for which page your on)

--- a/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
+++ b/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
@@ -32,7 +32,7 @@
         <a href="NewConstruction.html" target="_self"> New Construction </a>
       </div>
       <div class="col-sm-2">
-        <a href="ChineseDrywall.html" target="_self"> Chinese Drywall </a>
+        <a href="ChineseDrywall.html" style="text-decoration: underline" target="_self"> Chinese Drywall </a>
       </div>
       <div class="col-sm-2">
         <a href="ContactUs.html" target="_self"> Contact Us </a>
