--- a/TangentConstruction/TangentConstruction New Site/ContactUs.html
+++ b/TangentConstruction/TangentConstruction New Site/ContactUs.html
@@ -35,7 +35,7 @@
         <a href="ChineseDrywall.html" target="_self"> Chinese Drywall </a>
       </div>
       <div class="col-sm-2">
-        <a href="ContactUs.html" target="_self"> Contact Us </a>
+        <a href="ContactUs.html" style="text-decoration: underline" target="_self"> Contact Us </a>
       </div>
       <div class="col-sm-1"> </div>
     </div>
