--- a/TangentConstruction/TangentConstruction New Site/NewConstruction.html
+++ b/TangentConstruction/TangentConstruction New Site/NewConstruction.html
@@ -29,7 +29,7 @@
         <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a>
       </div>
       <div class="col-sm-2">
-        <a href="NewConstruction.html" target="_self"> New Construction </a>
+        <a href="NewConstruction.html" style="text-decoration: underline" target="_self"> New Construction </a>
       </div>
       <div class="col-sm-2">
         <a href="ChineseDrywall.html" target="_self"> Chinese Drywall </a>
