--- a/TangentConstruction/TangentConstruction New Site/TangentHome.html
+++ b/TangentConstruction/TangentConstruction New Site/TangentHome.html
@@ -2,7 +2,7 @@
 
 
 <html>
-<div class="pageContent container">
+<div class="pageContent container" style="overflow: auto">
   <header>
     <title> Tangent Construction Services </title>
     <link href="../css/TangentStyle.css" rel="stylesheet" type "text/css" />
@@ -23,7 +23,7 @@
       <div class="col-sm-1"> </div>
 
       <div class="col-sm-2">
-        <a href="TangentHome.html" target="_self"> Tangent Home </a>
+        <a href="TangentHome.html" style="text-decoration: underline" target="_self"> Tangent Home </a>
       </div>
       <div class="col-sm-2">
         <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a>
