--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
@@ -18,14 +18,13 @@
     <div id="nav" class="col-lg-12 center-block" style="text-align:center; align-content: center;">
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
-      <!-- spacing -->
       <hr>
       <div class="col-sm-1"> </div>
       <div class="col-sm-2">
         <a href="TangentHome.html" target="_self"> Tangent Home </a>
       </div>
       <div class="col-sm-2">
-        <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a>
+        <a href="StuccoRemediation.html" style="text-decoration: underline" target="_self"> Stucco Remediation </a>
       </div>
       <div class="col-sm-2">
         <a href="NewConstruction.html" target="_self"> New Construction </a>
@@ -42,7 +41,7 @@
   </header>
 
   <body>
-    <br> <br> <br> <br> <br> <br> <br>
+    <br> <br> <br> <br> <br> <br>
     <hr>
     <h1 style="text-align: center"> A Tangent worthy job... </h1>
     <hr>
@@ -120,31 +119,33 @@
         <div class="carousel-item active">
           <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/Demo.jpg" width="450" height="550" alt="First slide">
           <div class="carousel-caption">
-            <h3>First, we tear down the old stucco to assess the damage to framing.</h3>
+            <h3>First, we remove the old stucco to assess the damage to framing.</h3>
           </div>
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/Visqueen.jpg" width="450" height="550" alt="Second slide">
           <div class="carousel-caption">
-            <h3>Visqueen is used intermittently to protect the framing while work is being done.</h3>
+            <h3>Plastic visqueen is installed to protect the home from the outdoor elements.</h3>
           </div>
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/FrameRepairs.jpg" width="150" height="550" alt="Third slide">
           <div class="carousel-caption">
-            <h3>Framing damage is repaired.</h3>
+            <h3>We repair framing as needed.</h3>
           </div>
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/Tyvek.jpg" width="150" height="550" alt="Fourth slide">
           <div class="carousel-caption">
-            <h3>Tyvek is added as a water barrier for the framing.</h3>
+            <h3>Tyvek is added as a water vapor barrier over wood.</h3>
           </div>
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/WireLathe.jpg" width="150" height="550" alt="Fifth slide">
           <div class="carousel-caption">
-            <h3>Wire lathe is added so that the stucco has something to bond to.</h3>
+            <!-- <h3>Wire lathe is added so that the stucco can adhere to the.</h3> -->
+            <h3>Wire lath is added to the framing areas to give the stucco mud something to adhere to.</h3>
+            <!-- <h3>Vinyle beading is used to give the .</h3> -->
           </div>
         </div>
         <div class="carousel-item">
