testimony, contact us
First testimony was added, contact us was updated with times, font & format.

--- a/TangentConstruction/TangentConstruction New Site/ContactUs.html
+++ b/TangentConstruction/TangentConstruction New Site/ContactUs.html
@@ -47,15 +47,27 @@
     <hr>
 
     <h1> Want to contact Tangent Construction for potential work? </h1>
-    <p> Try one of these <br> <br>
+    <h4>
+      <br> <br>
+      <!-- Office hours are-  Monday - Thursday: 9:00 - 3:30. Friday - 9:00 - 1:00. Saturday - Sunday: closed. -->
+      Office hours - <br>
+      Monday: 9:00 - 3:30 <br>
+      Tuesday: 9:00 - 3:30 <br>
+      Wednesday: 9:00 - 3:30 <br>
+      Thursday: 9:00 - 3:30 <br>
+      Friday: 9:00 - 3:30 <br>
+      Saturday: closed <br>
+      Sunday: closed <br>
+      Closed holidays<br> <br>
       Phone: <br>
       (813) 628-4411 <br> <br>
 
-      email: <br> <br>
+      email: <br>
+      info@tangentconstructionservices.com <br> <br>
       Location: <br>
       4514 Oak Fair Boulevard, Suite 150<br>
       Tampa, Florida 33610<br> <br>
-    </p>
+    </h4>
 
 
 
