--- a/TangentConstruction/TangentConstruction New Site/TangentHome.html
+++ b/TangentConstruction/TangentConstruction New Site/TangentHome.html
@@ -64,7 +64,12 @@
     </p>
     <br>
     <br>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="text-align:center; align-content: center;">
+
+    <h2 style="text-align:center">
+      What are others saying about Tangent Construction Services?
+    </h2>
+    <!-- text-align:center; align-content: center; -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -72,13 +77,35 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="..." alt="First slide">
+          <!-- <img class="d-block w-100" src="..." alt="First slide"> -->
+          <!-- <p> others think that we are really teally cool </p> -->
+          <div class="col-sm-10 col-sm-offset-1">
+            <p>
+              <br>
+              "As owner and president of a residential and commercial construction company with operations in SE Fl and the greater Tampa market areas,
+              I have been associated with many subcontractor and service providers. When it comes to service
+              reliability, timeliness of performance, quality of execution, and general professional management,
+              Tangent Construction Services is among the best companies I've had the privilege of working with.
+              I've known this organization and its management team for many years.
+              The pricing is always fair, their accounting/billing practices transparent, an their warranty service when needed is always reliable.
+              I would not hesitate to recommend Tangent Construction Services for
+              their stucco and related construction work. <br> <br>
+
+              Feel free to call me personally for further testimonial." <br> <br>
+
+              James Hofford <br> <br>
+
+              President – Homes of Distinction Realty & Construction Inc. <br> <br>
+            </p>
+          </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="..." alt="Second slide">
+          <!-- <img class="d-block w-100" src="..." alt="Second slide"> -->
+          <p> but don't take our word for it </p>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="..." alt="Third slide">
+          <!-- <img class="d-block w-100" src="..." alt="Third slide"> -->
+          <p> take their word for it. </p>
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -91,7 +118,12 @@
       </a>
     </div>
 
-
+    <footer>
+      <hr>
+      <p>
+        apple
+      </p>
+    </footer>
 
     <script src="../js/jquery-3.3.1.min.js"> </script>
     <script src="../js/popper.min.js"> </script>
