--- a/TangentConstruction/TangentConstruction New Site/ContactUs.html
+++ b/TangentConstruction/TangentConstruction New Site/ContactUs.html
@@ -63,7 +63,7 @@
       (813) 628-4411 <br> <br>
 
       email: <br>
-      info@tangentconstructionservices.com <br> <br>
+      <a style="color: black" href="mailto:info@tangentconstructionservices.com"> info@tangentconstructionservices.com </a> <br> <br>
       Location: <br>
       4514 Oak Fair Boulevard, Suite 150<br>
       Tampa, Florida 33610<br> <br>
