--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
@@ -13,29 +13,18 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <h1>
-      <!-- Tangent Construction Services - Contact Us -->
+      <!-- Tangent Construction Services - Stucco -->
     </h1>
     <div id="nav" class="col-lg-12 center-block" style="text-align:center; align-content: center;">
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
-      <!-- spacing -->
       <hr>
       <div class="col-sm-1"> </div>
-
       <div class="col-sm-2">
         <a href="TangentHome.html" target="_self"> Tangent Home </a>
       </div>
       <div class="col-sm-2">
-        <div class="dropdown">
-          <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
-            <span class="caret"></span></button>
-          <ul class="dropdown-menu">
-            <li><a href="StuccoRemediationHome.html">Overview</a></li>
-            <li><a href="SealAndPaint.html">Seal and Paint</a></li>
-            <li><a href="StuccoRemediation.html">Re-Stucco</a></li>
-          </ul>
-        </div>
-        <!-- <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a> -->
+        <a href="StuccoRemediation.html" style="text-decoration: underline" target="_self"> Stucco Remediation </a>
       </div>
       <div class="col-sm-2">
         <a href="NewConstruction.html" target="_self"> New Construction </a>
@@ -44,7 +33,7 @@
         <a href="ChineseDrywall.html" target="_self"> Chinese Drywall </a>
       </div>
       <div class="col-sm-2">
-        <a href="ContactUs.html" style="text-decoration: underline" target="_self"> Contact Us </a>
+        <a href="ContactUs.html" target="_self"> Contact Us </a>
       </div>
       <div class="col-sm-1"> </div>
     </div>
@@ -54,30 +43,15 @@
   <body>
     <br> <br> <br> <br> <br> <br>
     <hr>
+    <h1 style="text-align: center"> How do I know if I need stucco remediation </h1>
+    <hr>
 
-    <h1> Want to contact Tangent Construction for potential work? </h1>
-    <h4>
-      <br> <br>
-      <!-- Office hours are-  Monday - Thursday: 9:00 - 3:30. Friday - 9:00 - 1:00. Saturday - Sunday: closed. -->
-      Office hours - <br>
-      Monday: 9:00 - 3:30 <br>
-      Tuesday: 9:00 - 3:30 <br>
-      Wednesday: 9:00 - 3:30 <br>
-      Thursday: 9:00 - 3:30 <br>
-      Friday: 9:00 - 3:30 <br>
-      Saturday: closed <br>
-      Sunday: closed <br>
-      Closed holidays<br> <br>
-      Phone: <br>
-      (813) 628-4411 <br> <br>
+    Stucco remediation is when we come out to fix damaged stucco. We do this in one of two ways. First, if it is lightly damaged, we can do a seal and paint.
+    Second option is for more damaged stucco, we come out and
 
-      email: <br>
-      <a style="color: black" href="mailto:info@tangentconstructionservices.com"> info@tangentconstructionservices.com </a> <br> <br>
-      Location: <br>
-      4514 Oak Fair Boulevard, Suite 150<br>
-      Tampa, Florida 33610<br> <br>
-    </h4>
-
+    <h3>
+      A cheaper option for less damaged stucco is to seal and repaint it.
+    </h3>
 
 
 
