--- a/TangentConstruction/TangentConstruction New Site/NewConstruction.html
+++ b/TangentConstruction/TangentConstruction New Site/NewConstruction.html
@@ -26,7 +26,18 @@
         <a href="TangentHome.html" target="_self"> Tangent Home </a>
       </div>
       <div class="col-sm-2">
-        <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a>
+
+        <div class="dropdown">
+          <button class="dropbtn">Dropdown
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+        </div>
+        <!-- <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a> -->
       </div>
       <div class="col-sm-2">
         <a href="NewConstruction.html" style="text-decoration: underline" target="_self"> New Construction </a>
@@ -81,8 +92,20 @@
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
-      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/Architectual stuff/ArcheStone.jpg"" width=" 250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/Architectual stuff/ArcheStone.jpg" width=" 250" height="200" alt="Photo of my wife and I in aprons." style="height: px300 width: px300;"> </div>
     </div>
+
+    <div id="painting" class='col-lg-12'>
+      <hr>
+      <h4 style="text-align: center"> We handle painting.. </h4>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/StuccoRemediation/Painting.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style="height: px300 width: px300;"> </div>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      </p>
+    </div>
+
 
 
 
