--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
@@ -171,10 +171,15 @@
       </a>
     </div>
 
+    <!-- spacer -->
+    <div class="col-lg-12">
+      <hr>
+    </div>
+
     <!-- This is for multi-Family  -->
     <br>
     <br>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="text-align:center; align-content: center;">
+    <div id="carouselEnclosure" class="carousel slide offset-md-2" data-ride="carousel" style="width: 800px; text-align:center; align-content: center;">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -237,7 +242,7 @@
     </h3>
 
     <div id="stucco" class='col-lg-12'>
-      <h4 style="text-align: center"> We seal the stucco.. </h4>
+      <h4 style="text-align: center"> We seal the cracks.. </h4>
       <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
@@ -248,7 +253,7 @@
 
     <div id="painting" class='col-lg-12'>
       <hr>
-      <h4 style="text-align: center"> We re-paint the house.. </h4>
+      <h4 style="text-align: center"> Then we re-paint the house.. </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
