pushed out the new navbars, changed dropdown
new navbars have been pushed to each page, colors changed.  Dropdown double arrow fixed.  Found colors for dropdown background (and its list) as well as lists wording.

--- a/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
+++ b/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
@@ -20,24 +20,35 @@
 
       <!-- spacing -->
       <hr>
-      <div class="col-sm-1"> </div>
+      <div class="navbar">
+        <div class="col-sm-1"> </div>
 
-      <div class="col-sm-2">
-        <a href="TangentHome.html" target="_self"> Tangent Home </a>
+        <div class="col-sm-2">
+          <a href="TangentHome.html" target="_self"> Tangent Home </a>
+        </div>
+        <div class="col-sm-2">
+          <div class="dropdown">
+            <button class="btn" type="button" data-toggle="dropdown">Stucco Remediation
+              <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+              <li><a href="StuccoRemediationHome.html">Overview</a></li>
+              <li><a href="SealAndPaint.html">Seal and Paint</a></li>
+              <li><a href="StuccoRemediation.html">Re-Stucco</a></li>
+            </ul>
+          </div>
+          <!-- <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a> -->
+        </div>
+        <div class="col-sm-2">
+          <a href="NewConstruction.html" target="_self"> New Construction </a>
+        </div>
+        <div class="col-sm-2">
+          <a href="ChineseDrywall.html" style="text-decoration: underline" target="_self"> Chinese Drywall </a>
+        </div>
+        <div class="col-sm-2">
+          <a href="ContactUs.html" target="_self"> Contact Us </a>
+        </div>
+        <div class="col-sm-1"> </div>
       </div>
-      <div class="col-sm-2">
-        <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a>
-      </div>
-      <div class="col-sm-2">
-        <a href="NewConstruction.html" target="_self"> New Construction </a>
-      </div>
-      <div class="col-sm-2">
-        <a href="ChineseDrywall.html" style="text-decoration: underline" target="_self"> Chinese Drywall </a>
-      </div>
-      <div class="col-sm-2">
-        <a href="ContactUs.html" target="_self"> Contact Us </a>
-      </div>
-      <div class="col-sm-1"> </div>
     </div>
 
   </header>
