--- a/TangentConstruction/TangentConstruction New Site/NewConstruction.html
+++ b/TangentConstruction/TangentConstruction New Site/NewConstruction.html
@@ -20,35 +20,35 @@
 
       <!-- spacing -->
       <hr>
-      <div class="col-sm-1"> </div>
+      <div class="navbar">
+        <div class="col-sm-1"> </div>
 
-      <div class="col-sm-2">
-        <a href="TangentHome.html" target="_self"> Tangent Home </a>
-      </div>
-      <div class="col-sm-2">
-
-        <div class="dropdown">
-          <button class="dropbtn">Dropdown
-            <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-          </div>
+        <div class="col-sm-2">
+          <a href="TangentHome.html" target="_self"> Tangent Home </a>
         </div>
-        <!-- <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a> -->
+        <div class="col-sm-2">
+          <div class="dropdown">
+            <button class="btn" type="button" data-toggle="dropdown">Stucco Remediation
+              <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+              <li><a href="StuccoRemediationHome.html">Overview</a></li>
+              <li><a href="SealAndPaint.html">Seal and Paint</a></li>
+              <li><a href="StuccoRemediation.html">Re-Stucco</a></li>
+            </ul>
+          </div>
+          <!-- <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a> -->
+        </div>
+        <div class="col-sm-2">
+          <a href="NewConstruction.html" style="text-decoration: underline" target="_self"> New Construction </a>
+        </div>
+        <div class="col-sm-2">
+          <a href="ChineseDrywall.html" target="_self"> Chinese Drywall </a>
+        </div>
+        <div class="col-sm-2">
+          <a href="ContactUs.html" target="_self"> Contact Us </a>
+        </div>
+        <div class="col-sm-1"> </div>
       </div>
-      <div class="col-sm-2">
-        <a href="NewConstruction.html" style="text-decoration: underline" target="_self"> New Construction </a>
-      </div>
-      <div class="col-sm-2">
-        <a href="ChineseDrywall.html" target="_self"> Chinese Drywall </a>
-      </div>
-      <div class="col-sm-2">
-        <a href="ContactUs.html" target="_self"> Contact Us </a>
-      </div>
-      <div class="col-sm-1"> </div>
     </div>
 
 
