--- a/TangentConstruction/TangentConstruction New Site/SealAndPaint.html
+++ b/TangentConstruction/TangentConstruction New Site/SealAndPaint.html
@@ -18,24 +18,37 @@
     <div id="nav" class="col-lg-12 center-block" style="text-align:center; align-content: center;">
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
+      <!-- spacing -->
       <hr>
-      <div class="col-sm-1"> </div>
-      <div class="col-sm-2">
-        <a href="TangentHome.html" target="_self"> Tangent Home </a>
+      <div class="navbar">
+        <div class="col-sm-1"> </div>
+
+        <div class="col-sm-2">
+          <a href="TangentHome.html" target="_self"> Tangent Home </a>
+        </div>
+        <div class="col-sm-2">
+          <div class="dropdown">
+            <button class="btn" style="text-decoration: underline" type="button" data-toggle="dropdown">Stucco Remediation
+              <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+              <li><a href="StuccoRemediationHome.html">Overview</a></li>
+              <li><a href="SealAndPaint.html">Seal and Paint</a></li>
+              <li><a href="StuccoRemediation.html">Re-Stucco</a></li>
+            </ul>
+          </div>
+          <!-- <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a> -->
+        </div>
+        <div class="col-sm-2">
+          <a href="NewConstruction.html" target="_self"> New Construction </a>
+        </div>
+        <div class="col-sm-2">
+          <a href="ChineseDrywall.html" target="_self"> Chinese Drywall </a>
+        </div>
+        <div class="col-sm-2">
+          <a href="ContactUs.html" target="_self"> Contact Us </a>
+        </div>
+        <div class="col-sm-1"> </div>
       </div>
-      <div class="col-sm-2">
-        <a href="StuccoRemediation.html" style="text-decoration: underline" target="_self"> Stucco Remediation </a>
-      </div>
-      <div class="col-sm-2">
-        <a href="NewConstruction.html" target="_self"> New Construction </a>
-      </div>
-      <div class="col-sm-2">
-        <a href="ChineseDrywall.html" target="_self"> Chinese Drywall </a>
-      </div>
-      <div class="col-sm-2">
-        <a href="ContactUs.html" target="_self"> Contact Us </a>
-      </div>
-      <div class="col-sm-1"> </div>
     </div>
 
   </header>
