added JavaScript footer
added footer and custom Javascript, footer information is automatically added to each page and saved in one spot.

--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
@@ -156,6 +156,7 @@
             <!-- <h3>Wire lathe is added so that the stucco can adhere to the.</h3> -->
             <h3>Wire lath is added to the framing areas to give the stucco mud something to adhere to.</h3>
             <!-- <h3>Vinyle beading is used to give the .</h3> -->
+            <!-- Control joints are used for segmenting stucco if it cracks. -->
           </div>
         </div>
         <div class="carousel-item">
@@ -247,10 +248,15 @@
       </a>
     </div>
 
+    <footer class="FooterInfo">
+    </footer>
+
+
 
     <script src="../js/jquery-3.3.1.min.js"> </script>
     <script src="../js/popper.min.js"> </script>
     <script src="../js/bootstrap.js"> </script>
+    <script src="../js/tangentJS.js"> </script>
   </body>
 </div>
 
