--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
@@ -67,7 +67,7 @@
 
     <div class="col-lg-12">
       <!-- <div> -->
-      <h3 class="col-md-6">
+      <h3 style="display: inline">
         How do you know if you need it?
       </h3>
 
@@ -100,6 +100,8 @@
         </a>
       </div>
       <p class='col-md-6'>
+        <!-- To account for inline header, 1 break -->
+        <br>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
@@ -179,10 +181,13 @@
 
 
 
+    <footer class="FooterInfo">
+    </footer>
 
     <script src="../js/jquery-3.3.1.min.js"> </script>
     <script src="../js/popper.min.js"> </script>
     <script src="../js/bootstrap.js"> </script>
+    <script src="../js/tangentJS.js"> </script>
   </body>
 </div>
 
