--- a/TangentConstruction/TangentConstruction New Site/TangentHome.html
+++ b/TangentConstruction/TangentConstruction New Site/TangentHome.html
@@ -141,16 +141,30 @@
       </a>
     </div>
 
-    <footer>
-      <hr>
-      <p>
-        apple
-      </p>
+    <footer class="FooterInfo">
     </footer>
+
+
 
     <script src="../js/jquery-3.3.1.min.js"> </script>
     <script src="../js/popper.min.js"> </script>
     <script src="../js/bootstrap.js"> </script>
+    <script src="../js/tangentJS.js"> </script>
+
+
+    <!-- <script>
+      const myFooter = document.getElementById('FooterInfo');
+      const footerFragment = document.createDocumentFragment();
+
+      let item1 = document.createElement('li');
+      let line = document.createElement('<hr>');
+
+      item1.textContent = 'Kyle  <hr>';
+
+      footerFragment.appendChild(item1);
+      // footerFragment.appendChild(line);
+      FooterInfo.appendChild(footerFragment)
+    </script> -->
   </body>
 </div>
 
