--- a/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
+++ b/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
@@ -82,9 +82,13 @@
 
 
 
+    <footer class="FooterInfo">
+    </footer>
+
     <script src="../js/jquery-3.3.1.min.js"> </script>
     <script src="../js/popper.min.js"> </script>
     <script src="../js/bootstrap.js"> </script>
+    <script src="../js/tangentJS.js"> </script>
   </body>
 </div>
 
