--- a/TangentConstruction/TangentConstruction New Site/ContactUs.html
+++ b/TangentConstruction/TangentConstruction New Site/ContactUs.html
@@ -69,6 +69,7 @@
       Saturday: closed <br>
       Sunday: closed <br>
       Closed holidays<br> <br>
+
       Phone: <br>
       (813) 628-4411 <br> <br>
 
@@ -79,12 +80,13 @@
       Tampa, Florida 33610<br> <br>
     </h4>
 
-
-
+    <footer class="FooterInfo">
+    </footer>
 
     <script src="../js/jquery-3.3.1.min.js"> </script>
     <script src="../js/popper.min.js"> </script>
     <script src="../js/bootstrap.js"> </script>
+    <script src="../js/tangentJS.js"> </script>
   </body>
 </div>
 
