--- a/TangentConstruction/TangentConstruction New Site/SealAndPaint.html
+++ b/TangentConstruction/TangentConstruction New Site/SealAndPaint.html
@@ -115,9 +115,14 @@
       <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/StuccoRemediation/Painting.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
     </div>
 
+
+    <footer class="FooterInfo">
+    </footer>
+
     <script src="../js/jquery-3.3.1.min.js"> </script>
     <script src="../js/popper.min.js"> </script>
     <script src="../js/bootstrap.js"> </script>
+    <script src="../js/tangentJS.js"> </script>
   </body>
 </div>
 
